--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
   <div id="container">
     <div id="carnList">
-      <h1>Predators</h1>
+      <h1>Carnivores</h1>
     </div>
     <div id="herbList">
-      <h1>Herbavores</h1>
+      <h1>Herbivores</h1>
     </div>
   </div>
   <script type="text/javascript" src="Predator.js"></script>
